{
  "version": 4,
  "terraform_version": "1.1.5",
  "serial": 3,
  "lineage": "b63ce613-86b5-e0a0-9d53-3bf4c7660fdd",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "f5_big_ip_adc_hourly_good_25mbps_1_tcp_22",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-02-04T08:54:04.941-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/f5-terraform-344519/global/firewalls/f5-big-ip-adc-hourly-good-25mbps-1-tcp-22",
            "log_config": [],
            "name": "f5-big-ip-adc-hourly-good-25mbps-1-tcp-22",
            "network": "https://www.googleapis.com/compute/v1/projects/f5-terraform-344519/global/networks/default",
            "priority": 1000,
            "project": "f5-terraform-344519",
            "self_link": "https://www.googleapis.com/compute/v1/projects/f5-terraform-344519/global/firewalls/f5-big-ip-adc-hourly-good-25mbps-1-tcp-22",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "f5-big-ip-adc-hourly-good-25mbps-1-deployment"
            ],
            "timeouts": {
              "create": null,
              "delete": null,
              "update": null
            }
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "f5_big_ip_adc_hourly_good_25mbps_1_tcp_8443",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-02-04T08:54:04.907-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/f5-terraform-344519/global/firewalls/f5-big-ip-adc-hourly-good-25mbps-1-tcp-8443",
            "log_config": [],
            "name": "f5-big-ip-adc-hourly-good-25mbps-1-tcp-8443",
            "network": "https://www.googleapis.com/compute/v1/projects/f5-terraform-344519/global/networks/default",
            "priority": 1000,
            "project": "f5-terraform-344519",
            "self_link": "https://www.googleapis.com/compute/v1/projects/f5-terraform-344519/global/firewalls/f5-big-ip-adc-hourly-good-25mbps-1-tcp-8443",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "f5-big-ip-adc-hourly-good-25mbps-1-deployment"
            ],
            "timeouts": {
              "create": null,
              "delete": null,
              "update": null
            }
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "f5_big_ip_adc_hourly_good_25mbps_1_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "autogen-vm-tmpl-boot-disk",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/f5-7626-networks-public/global/images/f5-bigip-14-1-5-3-0-0-5-payg-good-25mbps-221225181734",
                    "size": 41,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/f5-terraform-344519/zones/europe-west2-b/disks/f5-big-ip-adc-hourly-good-25mbps-1-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/f5-terraform-344519/zones/europe-west2-b/instances/f5-big-ip-adc-hourly-good-25mbps-1-vm",
            "instance_id": "1326480238568485699",
            "label_fingerprint": "GcvdrsmsCpI=",
            "labels": {
              "goog-dm": "f5-big-ip-adc-hourly-good-25mbps-1"
            },
            "machine_type": "n1-standard-2",
            "metadata": {
              "google-logging-enable": "0",
              "google-monitoring-enable": "0",
              "ssh-keys": "philip_ld_hines:ecdsa-sha2-nistp256 AAAAE2VjZHNhLXNoYTItbmlzdHAyNTYAAAAIbmlzdHAyNTYAAABBBDa1/DZz2hXtMizy7NMzWD917E7aon4M1fHB8Nhp/16L+AHdNaPdWyWDlizJC1ZPa0DeiuVijnjAjhXvAilk5xI= google-ssh {\"userName\":\"philip.ld.hines@googlemail.com\",\"expireOn\":\"2023-02-04T17:11:56+0000\"}\nadmin:ecdsa-sha2-nistp256 AAAAE2VjZHNhLXNoYTItbmlzdHAyNTYAAAAIbmlzdHAyNTYAAABBBOF8o+77Is/TXgDLT5QYhsGX++F7oDz0R6wTn14AnQP53U+d1IwLeG50pjIHd+OpyOmrHKOJyyUCsIe5A/+AXpY= google-ssh {\"userName\": [...]
            },
            "metadata_fingerprint": "EdcaHmNi0uc=",
            "name": "f5-big-ip-adc-hourly-good-25mbps-1-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.234.154.208",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/f5-terraform-344519/global/networks/default",
                "network_ip": "10.154.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/f5-terraform-344519/regions/europe-west2/subnetworks/default",
                "subnetwork_project": "f5-terraform-344519"
              }
            ],
            "project": "f5-terraform-344519",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/f5-terraform-344519/zones/europe-west2-b/instances/f5-big-ip-adc-hourly-good-25mbps-1-vm",
            "service_account": [
              {
                "email": "837537861954-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud.useraccounts.readonly",
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring.write"
                ]
              }
            ],
            "tags": [
              "f5-big-ip-adc-hourly-good-25mbps-1-deployment"
            ],
            "tags_fingerprint": "OQJbrNfoNcs=",
            "timeouts": {
            },
            "zone": "europe-west2-b"
          }
        }
      ]
    }
  ]
}